--- a/manifests/DeKruisdraging_manifest.json
+++ b/manifests/DeKruisdraging_manifest.json
@@ -186,9 +186,8 @@
             ],
             "otherContent": [
     {
-        "@id": "https://github.com/ReinDebrulle/annonatate/blob/main/_annotations/3417838d-8592-4468-b80d-ec5438d1aef9.json",
-        "@type": "sc:AnnotationList",
-        "label": "My fantastic annotations"
+        "id": "https://github.com/ReinDebrulle/annonatate/blob/main/_annotations/3417838d-8592-4468-b80d-ec5438d1aef9.json",
+        "type": "AnnotationPage"
     }
 ],
             "thumbnail": [
